namespace java com.meituan.mtrace.thrift.model

const i32 TRACE_DATA_LIST = 6;
const i32 TRACE_COMPRESS_DATA_LIST = 7;
const i32 LOG_LIST = 8;
